# fsc-assistant

./: .dev_profile  PROJECT_ANALYSIS.md  README.md  package-lock.json  package.json  pyproject.toml  sample.fsc-assistant.env.toml
.github/workflows/: python-publish.yml
docs/: README.md  getting-started.md  refactor-agent-client.md
docs/proposals/: 001-rename-builtin-to-core-tools.md
nodejs-version/: CONFIGURATION.md  FINAL-VALIDATION.md  MIGRATION-GUIDE.md  README.md  build.sh  demo.js  deploy.sh  package-lock.json  package.json  test-all.js  test-config.toml  test-setup.js  test-shell.sh  tsconfig.json
nodejs-version/__tests__/: all-components.test.ts  cli-validation.test.ts  command_handler.test.ts  config.test.ts  cross-platform.test.ts  document_analysis.test.ts  integration.test.ts  llm.test.ts  mcp.test.ts  performance.test.ts  shell.test.ts  tool-functionality.test.ts  tools.test.ts
nodejs-version/src/: cli.ts  types.ts
nodejs-version/src/agents/: command_handler.ts  history.ts  shell.ts
nodejs-version/src/config/: manager.ts
nodejs-version/src/llm/: agent_client.ts  mcp.ts
nodejs-version/test/: agent_test.ts
openspec/: project.md
openspec/changes/add-download-web-file-tool/: proposal.md  tasks.md
openspec/changes/add-google-custom-search/: IMPLEMENTATION_SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/add-llm-shell-output-handling/: design.md  proposal.md  tasks.md
openspec/changes/add-system-shell-tool-function/: design.md  proposal.md  tasks.md
openspec/changes/bump-patch-version/: design.md  proposal.md  tasks.md
openspec/changes/change-working-directory/: design.md  proposal.md  tasks.md
openspec/changes/clone-fsc-assistant-nodejs/: design.md  proposal.md  tasks.md
openspec/changes/close-github-pr-tool/: proposal.md  tasks.md
openspec/changes/list-github-prs-tool/: proposal.md  tasks.md
openspec/changes/optimize-shell-startup/: proposal.md  tasks.md
openspec/changes/refactor-agent-client/: SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/refactor-llm-client-module/: design.md  proposal.md  tasks.md
openspec/changes/run-shell-daemon-mode-tool/: design.md  proposal.md  tasks.md
src/assistant/: __version__.py  banner.py  cli.py
src/assistant/agents/: agent_repo.py  query_analyzer.py  shell.py  shell_constants.py
src/assistant/config/: manager.py  manager.py.backup
src/assistant/database/: __init__.py  models.py  rdb_inspector.py  sqlalchemy_urls.py
src/assistant/generators/: __init__.py  any_code.py  base.py  docstring.py  library.py  pytest.py  python.py  query_name.py  rust.py  svg.py  text.py  vue.py  vue_app.py
src/assistant/integrations/: openspec.py
src/assistant/llm/: agent_client.py  agent_client_refactored.py  client.py  history.py
src/assistant/mcp/: __init__.py  registry.py  sample.py  search_mcp.py
src/assistant/prompts/: __init__.py  pytest.py  python.py  refactor.py  review.py  rust.py  sql.py  vue.py
src/assistant/tools/: README.md  __init__.py  agent_tools.py  base_tool.py  builtin.py  tools.py  (+4 more)
src/fsc/: assistant_shell.py  cli.py  config.py
tests/: ocr_test.py  test_agent_client_refactored.py  test_system_shell_tool.py
tests/llm/: test_orchestrator.py
(+138 files in other folders)
