[project]
name = "fsc-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "openai>=2.6.1",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "tomlkit>=0.13.3",
]
